src/app/edit-meeting/edit-meeting.component.css
input {
  width: 100%;
  background-color: #E5E5E5;
  border-radius: 3px;
  margin: 5px;
  padding: 5px;
}

.card-header {
  background-color: #616161;
  height: 60px;
}

.card-header-title {
  color: #fff;
  font-size: 20px;
  font-weight: 400;
  line-height: 1.4;
}

::placeholder {
  color: #958FA2;
}

button {
  width: 250px;
  max-width: 250px;
  color: black;
  margin: 0 auto;
}

.foot {
  vertical-align : bottom;
}

textarea {
  margin: 5px;
  padding: 10px;
  width: 100%;
}

.subHeader {
  text-align: center;
}

.oldMeetingColumn {
  padding: 15px;
}

@media screen and (min-width: 0px) and (max-width: 1087px) {
  .container.minutes-container {
    margin-left: 5%;
    margin-right: 5%;
  }
}

